# CNN-Models-on-ZCU104

./: README.md
LENET/: lenet_kernel.v  lenet_kernel_gmem0_m_axi.v  lenet_kernel_local_in_RAM_AUTO_1R1W.v
LENET/LeNet/hls_component/hls_component/hls/.autopilot/db/driver/src/: CMakeLists.txt  xlenet_kernel.h
LENET/_ide/: .peers.ini  version.ini  workspace_journal.py
LENET/letnet_vivado/: letnet_vivado.xpr
MOBILENETV2/: mobilenetv2_block.v  mobilenetv2_block_control_s_axi.v  mobilenetv2_block_depthwise_conv_line_buffer_RAM_AUTO_1R1W.v  mobilenetv2_block_fifo_w16_d2_S.v  mobilenetv2_block_gmem0_m_axi.v  mobilenetv2_block_pointwise_conv_Pipeline_VITIS_LOOP_77_3.v
MOBILENETV2/_ide/: version.ini  workspace_journal.py
MOBILENETV2/hls_component/: MobileNetV2.cpp  MobileNetV2_tb.cpp  compile_commands.json  hls_config.cfg
MOBILENETV2/mobilenetv2_vivado/: mobilenetv2_vivado.xpr
RESNET50/: resnet50_bottleneck.v  resnet50_bottleneck_fifo_w16_d1024_A.v  resnet50_bottleneck_local_in_RAM_AUTO_1R1W.v
RESNET50/RESNET50_VIVADO/: RESNET50_VIVADO.xpr
RESNET50/_ide/: version.ini  workspace_journal.py
RESNET50/hls_component/: ResNet50.cpp  ResNet50_tb.cpp  compile_commands.json  hls_config.cfg
alexnet/: alexnet_layer1_control_s_axi.v  alexnet_layer1_gmem1_m_axi.v  alexnet_layer1_mac_muladd_6ns_6ns_19ns_19_4_1.v
alexnet/_ide/: version.ini  workspace_journal.py  workspace_journal_22928.py  workspace_journal_6156.py
alexnet/alexnet_result/: deignhiearchyTable.xlsx  utilizationTable.xlsx
alexnet/hls_component/: alexnet.cpp  alexnet_tbb.cpp  compile_commands.json  (+1 more)
(+831 files in other folders)
